--- a/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Closure/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,11 +73,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/CallumContent/EnvironmentLevel
-MRUItem1=/Game/CallumContent/MainMenu
+MRUItem0=/Game/CallumContent/MainMenu
+MRUItem1=/Game/CallumContent/EndScreen
+MRUItem2=/Game/CallumContent/EnvironmentLevel
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/CallumContent/UI
+ContentBrowserTab1.SelectedPaths=/Game/CallumContent
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -101,10 +102,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/CallumContent/EnvironmentLevel
+LastLevel=/Game/CallumContent/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/CallumContent/BP_MainMenu.BP_MainMenu
+OpenAssetsAtExit=/Game/CallumContent/BP_Endgame_Menu.BP_Endgame_Menu
+OpenAssetsAtExit=/Game/CallumContent/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -399,6 +403,24 @@ SoundWave.Debug=True
 SoundWave.Concurrency=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LodSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Sampling=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/CallumContent/Child_TombStone.Child_TombStone;
@@ -437,7 +459,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../MiniProduction2/Closure/Content/CallumContent
+UNR=../../../../Users/Callum.de 7722/Desktop/MiniProduction2/Closure/Content/CallumContent
 BRUSH=../../../../../Users/callum.de 7722/Desktop/MiniProduction2/Closure/Content/
 FBX=../../../../../Users/callum.de 7722/Desktop/MiniProduction2/Closure/Content/
 FBXAnim=../../../../../Users/callum.de 7722/Desktop/MiniProduction2/Closure/Content/
@@ -1039,6 +1061,12 @@ Cascade.TimeStamp=2019.03.20-23.16.48
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2019.03.20-23.16.49
 DistCurveEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2019.03.20-23.16.55
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2019.03.20-23.16.54
+PinnedCommandList.LastCompileMethod=Unknown
+ClothingSystemEditorInterface.TimeStamp=2019.03.20-23.16.48
+ClothingSystemEditorInterface.LastCompileMethod=Unknown
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1059,15 +1087,17 @@ PreviewAspectRatio=16:9
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.NormalPadding\" "
-Object=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+Object="\"Object.Appearance.Brush\" "
 Image="\"Object.Appearance.Brush\" "
 VerticalBox=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ParticleSystem="\"Object.Bounds.FixedRelativeBoundingBox\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/CallumContent/BP_MainMenu.BP_MainMenu=0
@@ -1097,6 +1127,10 @@ ParticleSystem="\"Object.Bounds.FixedRelativeBoundingBox\" "
 /Game/CallumContent/Feather.Feather=0
 /Game/CallumContent/Kite_Static.Kite_Static=0
 /Game/CallumContent/Frost_Lily_plant.Frost_Lily_plant=1
+/Game/CallumContent/Pine_tree.Pine_Tree=1
+/Game/CallumContent/kiteanim.kiteanim=0
+/Game/CallumContent/Rose_pPlane7.Rose_pPlane7=0
+/Game/CallumContent/Grave_chipped.Grave_chipped=0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1300,5 +1334,36 @@ bRerunConstructionScripts=False
 bShowDebugVisualization=False
 bVisualizePreAndPostRoll=True
 TrajectoryPathCap=250
+
+[FEditorModeTools]
+CoordSystem=1
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+
+[DetailCategoriesAdvanced]
+Image.Behavior=True
 
 
